--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,11 +1,20 @@
-/* Variables */
+p {
+  font-size: 1.35rem;
+}
+
 /* Header */
 header.masthead {
   padding-top: calc(5rem + 72px);
   padding-bottom: 5rem;
 }
+header.masthead .masthead-content .masthead-heading {
+  font-size: 6rem;
+}
+header.masthead .masthead-content .masthead-subheading {
+  font-size: 4rem;
+}
 
-/* Vectores en Footer */
+/* Footer */
 .footer .footer__image {
   width: 24px;
 }
@@ -43,9 +52,9 @@ header.masthead {
 }
 
 /* Para pantallas de Desktop */
-@media (min-width: 992px) {
+@media (min-width: 990px) {
   header.masthead {
-    padding-top: calc(5rem + 55px);
+    padding-top: calc(8rem + 55px);
     padding-bottom: 8rem;
   }
 
@@ -55,5 +64,9 @@ header.masthead {
 
   header.masthead .masthead-content .masthead-subheading {
     font-size: 4rem;
+  }
+
+  p {
+    font-size: 1.25rem;
   }
 }
