--- a/scss/mystyle.scss
+++ b/scss/mystyle.scss
@@ -1,7 +1,9 @@
 p{
     font-size: 1.35rem;
 }
-
+.modal{
+    white-space: pre-line
+}
 /* Header */
 header.masthead{
     padding-top:calc(5rem + 72px);
