--- a/scss/mystyle.scss
+++ b/scss/mystyle.scss
@@ -1,9 +1,12 @@
+/* Texto en parrafos */
 p{
     font-size: 1.35rem;
 }
+/* Modal */
 .modal{
-    white-space: pre-line
+    white-space: pre-line;
 }
+/* Animaciones */
 h1:hover{
     transition: color 1s;
     color: blue;
@@ -39,7 +42,7 @@ header.masthead{
 /* Boton Extra Large */
 .btn-xl{
     text-transform:uppercase;
-    padding:1rem 2rem;
+    padding:1.5rem 2rem;
     font-weight:700;
     letter-spacing:.1rem
 }
@@ -64,7 +67,7 @@ header.masthead{
 
 
 /* Para pantallas de Desktop */
-@media (min-width:990px){
+@media (min-width:900px){
     header.masthead{
         padding-top:calc(8rem + 55px);
         padding-bottom:8rem
